Closed Bug 510052 Opened 15 years ago Closed 15 years ago

JS fails to build in debug config in scratchbox

Categories

(Core :: JavaScript Engine, defect, P2)

ARM
Linux
defect

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta5-fixed
fennec 1.0+ ---

People

(Reporter: bcombee, Assigned: sayrer)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Because of an assert in the JS engine, building Fennec using scratchbox for the Nokia tablets fails.  Talking with vlad on IRC, the new assert fails when running ARM code in scratchbox, because it detects the CPU as x86, not ARM.
Flags: wanted1.9.2?
Flags: wanted-fennec1.0?
Comment on attachment 394115 [details] [diff] [review]
Change to disable assert when using scratchbox

That's probably fine, though auxv is likely entirely wrong in scratchbox...
Attachment #394115 - Flags: review+
No, I think you want to only do the getenv in the debug case.

Is there a bug on fixing the platform detection code?  Is it a bug in how we detect, or how scratchbox reports?
I can add some logging code to this to see what's returned when an ARM binary is running in SB to see if it's saying x86 or ARM.  That will indicate if the detection code is valid for that run environment.
OK, tested, the plat[0:2] value loaded when the ARM binary is run in scratchbox on x86 is "i68".  This code needs an alternative way of discovering the architecture of the target ARM platform.
Is that a scratchbox bug that we should file upstream (in addition to working around for now, for sure) or are we detecting in the wrong way generally?
We could detect the machine type using uname system call, but I don't think that gives us color on the specific ARM architecture.  Since Scratchbox runs ARM binaries using qemu as an user-mode emulator, the kernel is correct in saying it's a x86 app when you read /proc/self/auxv.  qemu overrides some system calls, but not the /proc reads.

We should see if qemu can fix this, but I think a workaround is appropriate for now.  That workaround could just be overriding the value using the environment variable, something we could add to the scratchbox build instructions for Fennec.
tracking-fennec: --- → ?
Flags: blocking1.9.2?
is this fixed?
I don't see the patch on TM. The debug hack in the patch looks ok to me. Lets take it if nobody has a better idea.
Not blocking.  We should make sure this gets in.  Assigning to sayre.  Sayre, can you make sure this gets checked in?
Assignee: general → sayrer
Flags: wanted1.9.2?
Flags: wanted1.9.2+
Flags: blocking1.9.2?
Flags: blocking1.9.2+
P2.
Priority: -- → P2
tracking-fennec: ? → 1.0+
http://hg.mozilla.org/tracemonkey/rev/bb0a5cb4bbc3
Whiteboard: fixed-in-tracemonkey
Flags: in-testsuite-
http://hg.mozilla.org/mozilla-central/rev/bb0a5cb4bbc3
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
These bugs landed after b4 was cut. Moving flag out.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: