Bug 510052 - JS fails to build in debug config in scratchbox. r=vlad